# storio

./: .gitignore  CMakeLists.txt  CMakePresets.json
csapp/: App.axaml  App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  Storio.csproj  Storio.sln  app.manifest
storlib/: CMakeLists.txt  storlib.cpp
