cmake_minimum_required(VERSION 3.15.0 FATAL_ERROR)
set(CMAKE_PREFIX_PATH ${PROJ_INSTALL_PATH} ${VCPKG_INSTALL_PATH})
set(CMAKE_SYSTEM_VERSION 10.0 CACHE STRING "" FORCE)
set(CMAKE_EXPORT_COMPILE_COMMANDS on)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

project(storlib C CXX)
set(CMAKE_CONFIGURATION_TYPES "Debug;Release") 
set(CMAKE_INSTALL_PREFIX ${PROJ_INSTALL_PATH})

find_package(FFMPEG REQUIRED)

add_subdirectory(storlib)